--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -184,12 +184,12 @@
                                     {% include "common/display_field_if_exists.html" with label="Date d'achat" value=programme.date_achat object_field="programme__date_achat__"|add:programme_uuid %}
                                     {% include "common/display_field_if_exists.html" with label="Date d'achèvement previsible" value=programme.date_achevement_previsible object_field="programme__date_achevement_previsible__"|add:programme_uuid %}
                                     {% include "common/display_field_if_exists.html" with label="Date d'achèvement ou d'obtention de certificat de conformité" value=programme.date_achevement object_field="programme__date_achevement__"|add:programme_uuid %}
-                                    {% include "common/display_text_and_files_if_exists.html" with label="Vendeur" text=programme.vendeur_text file_list=programme.vendeur_files.values object_field="programme__vendeur__"|add:programme_uuid %}
-                                    {% include "common/display_text_and_files_if_exists.html" with label="Acquéreur" text=programme.acquereur_text file_list=programme.acquereur_files.values object_field="programme__acquereur__"|add:programme_uuid %}
-                                    {% include "common/display_text_and_files_if_exists.html" with label="Référence du notaire" text=programme.reference_notaire_text file_list=programme.reference_notaire_files.values object_field="programme__reference_notaire__"|add:programme_uuid %}
-                                    {% include "common/display_text_and_files_if_exists.html" with label="Référence de publication de l'acte" text=programme.reference_publication_acte_text file_list=programme.reference_publication_acte_files.values object_field="programme__reference_publication_acte__"|add:programme_uuid %}
-                                    {% include "common/display_text_and_files_if_exists.html" with label="Acte de propriété / Acte notarial" text=programme.acte_de_propriete_text file_list=programme.acte_de_propriete_files.values object_field="programme__acte_de_propriete__"|add:programme_uuid %}
-                                    {% include "common/display_text_and_files_if_exists.html" with label="Certificat d'adressage / Autres" text=programme.certificat_adressage_text file_list=programme.certificat_adressage_files.values object_field="programme__certificat_adressage__"|add:programme_uuid %}
+                                    {% include "common/display_text_and_files_if_exists.html" with label="Vendeur" text=programme.vendeur|get_text_from_textfiles file_list=programme.vendeur|get_files_from_textfiles object_field="programme__vendeur__"|add:programme_uuid %}
+                                    {% include "common/display_text_and_files_if_exists.html" with label="Acquéreur" text=programme.acquereur|get_text_from_textfiles file_list=programme.acquereur|get_files_from_textfiles object_field="programme__acquereur__"|add:programme_uuid %}
+                                    {% include "common/display_text_and_files_if_exists.html" with label="Référence du notaire" text=programme.reference_notaire|get_text_from_textfiles file_list=programme.reference_notaire|get_files_from_textfiles object_field="programme__reference_notaire__"|add:programme_uuid %}
+                                    {% include "common/display_text_and_files_if_exists.html" with label="Référence de publication de l'acte" text=programme.reference_publication_acte|get_text_from_textfiles file_list=programme.reference_publication_acte|get_files_from_textfiles object_field="programme__reference_publication_acte__"|add:programme_uuid %}
+                                    {% include "common/display_text_and_files_if_exists.html" with label="Acte de propriété / Acte notarial" text=programme.acte_de_propriete|get_text_from_textfiles file_list=programme.acte_de_propriete|get_files_from_textfiles object_field="programme__acte_de_propriete__"|add:programme_uuid %}
+                                    {% include "common/display_text_and_files_if_exists.html" with label="Certificat d'adressage / Autres" file_list=programme.certificat_adressage|get_files_from_textfiles object_field="programme__certificat_adressage__"|add:programme_uuid %}
                                 </div>
                             </div>
                         </div>
@@ -213,7 +213,7 @@
                                         </a>
                                     {% endif %}
                                 </div>
-                                {% include "common/display_text_and_files_if_exists.html" with text=programme.reference_cadastrale_text file_list=programme.reference_cadastrale_files.values %}
+                                {% include "common/display_text_and_files_if_exists.html" with text=programme.reference_cadastrale|get_text_from_textfiles file_list=programme.reference_cadastrale|get_files_from_textfiles %}
                                 <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
                                     <table>
                                         <thead>
@@ -256,7 +256,7 @@
                                         </tbody>
                                     </table>
                                 </div>
-                                {% include "common/display_text_and_files_if_exists.html" with  file_list=programme.effet_relatif_files.values %}
+                                {% include "common/display_text_and_files_if_exists.html" with file_list=programme.effet_relatif|get_files_from_textfiles %}
                             </div>
                         </div>
                     </div>
@@ -279,9 +279,9 @@
                                     {% endif %}
                                 </div>
                                 <div class="table--limited-height">
-                                    {% include "common/display_text_and_files_if_exists.html" with label="EDD volumétrique" text=lot.edd_volumetrique_text file_list=lot.edd_volumetrique_files.values object_field="lot__edd_volumetrique__"|add:lot_uuid %}
+                                    {% include "common/display_text_and_files_if_exists.html" with label="EDD volumétrique" text=lot.edd_volumetrique|get_text_from_textfiles file_list=lot.edd_volumetrique|get_files_from_textfiles object_field="lot__edd_volumetrique__"|add:lot_uuid %}
                                     {% include "common/display_field_if_exists.html" with label="Mention de publication de l'EDD volumétrique" value=programme.mention_publication_edd_volumetrique object_field="programme__mention_publication_edd_volumetrique__"|add:programme_uuid %}
-                                    {% include "common/display_text_and_files_if_exists.html" with label="EDD classique" text=lot.edd_classique_text file_list=lot.edd_classique_files.values object_field="lot__edd_classique__"|add:lot_uuid %}
+                                    {% include "common/display_text_and_files_if_exists.html" with label="EDD classique" text=lot.edd_classique|get_text_from_textfiles file_list=lot.edd_classique|get_files_from_textfiles object_field="lot__edd_classique__"|add:lot_uuid %}
                                     {% include "common/display_field_if_exists.html" with label="Mention de publication de l'EDD classique" value=programme.mention_publication_edd_classique object_field="programme__mention_publication_edd_classique__"|add:programme_uuid %}
                                 </div>
                                 <p class="fr-my-1w">EDD Simplifé : </p>
