--- a/templates/conventions/recapitulatif/comments.html
+++ b/templates/conventions/recapitulatif/comments.html
@@ -15,7 +15,7 @@
                     {% endif %}
                 </div>
                 <div class="table--limited-height">
-                    {% include "common/display_text_and_files_if_exists.html" with text=convention.comments_text file_list=convention.comments_files.values %}
+                    {% include "common/display_text_and_files_if_exists.html" with text=convention.comments|get_text_from_textfiles file_list=convention.comments|get_files_from_textfiles %}
                 </div>
             </div>
         </div>
