--- a/templates/operations/common/form_header.html
+++ b/templates/operations/common/form_header.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="fr-col-12 fr-col-lg-6 fr-grid-row fr-grid-row--right">
                     <div>
-                        {% if CERBERE_AUTH %}
+                        {% if CERBERE_AUTH and programme.numero_galion %}
                             <div class="fr-grid-row fr-grid-row--right fr-my-2w">
                                 <a href="{{ request|get_siap_operation_url:programme.numero_galion }}">
                                     Financement
