--- a/templates/conventions/selection.html
+++ b/templates/conventions/selection.html
@@ -33,6 +33,10 @@
                                         });
                                     </script>
                                     <div id='programme_selection' class="fr-ml-4w fr-select-group {% if form.lot_uuid.errors %}fr-select-group--error{% endif %}"  {% if form.existing_programme.value != 'selection' %}hidden{% endif %}>
+                                        <details>
+                                            <summary class="text-title-blue-france fr-text--xs"><u>Comment afficher uniquement les programmes de mes départements ?</u></summary>
+                                            <div class="fr-text--xs">sd</div>
+                                        </details>
                                         <div class="fr-mt-1w block--row-strech" id="{{form.lot_uuid.id_for_label}}_div">
                                             <select
                                                 class="fr-select {% if form.lot_uuid.errors %}fr-select--error{% endif %}"
