--- a/templates/conventions/submitted.html
+++ b/templates/conventions/submitted.html
@@ -8,7 +8,7 @@
         <div class="fr-container">
             <div class="fr-grid-row fr-grid-row--gutters">
                 <div class="fr-col-md-12  fr-my-5w">
-                    <h2>Félicitation</h2>
+                    <h2>Félicitations</h2>
                     <h4 class="fr-mb-3w">Bravo, vous venez de soumettre votre {% if convention.is_avenant %}avenant de {% endif %}convention à l'instruction en date du {{convention.soumis_le}}</h4>
                     {% if convention.is_avenant %}
                         <p class="fr-mb-3w">Le présent avenant ne peut plus être modifié. Le service instructeur a été notifié et instruira cet avenant dans les plus bref délais.
