--- a/templates/conventions/common/form_annexes.html
+++ b/templates/conventions/common/form_annexes.html
@@ -6,12 +6,10 @@
     value="{{ form.uuid.value|default_if_none:'' }}">
 <div class="fr-grid-row fr-grid-row--gutters">
     <div class="fr-col-md-12">
-
+        <h4>Annexes associées aux logements exclues du calcul de la surface utile et pouvant donner lieu à un loyer accessoire</h4>
         <div role="alert" class="fr-alert fr-alert--info fr-mb-3w">
             <p class="fr-mb-1w">Attention, les annexes concernées sont ici les jardins, les caves et les surfaces de terrasse au-delà de 9 m² (ex : Pour une terrasse d’une surface totale de 10 m², renseignez ici uniquement 1 m², les 9m² sont intégrés dans le calcul de la surface utile)</p>
         </div>
-
-        <h4>Annexes associées aux logements exclues du calcul de la surface utile et pouvant donner lieu à un loyer accessoire</h4>
         <div id='download_upload_block' {% if not editable %}hidden{% endif %}>
             {% include "common/form/download_upload_form.html" with convention_uuid=convention.uuid file_type='annexes' upform=upform  what='annexes'%}
             <hr class="fr-col-12 fr-my-3w">
@@ -85,7 +83,8 @@
         </div>
 
 
-        <h4>Type d'annexes incluses dans le calcul de la surface utile</h4>
+        <h4 class="fr-mb-1w">Type d'annexes incluses dans le calcul de la surface utile</h4>
+        <div class="fr-hint-text fr-mb-2w">Cochez les annexes que vous souhaitez voir apparaitre dans la convention</div>
 
         <div class="fr-grid-row fr-grid-row--gutters">
             <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
