--- a/templates/conventions/programme.html
+++ b/templates/conventions/programme.html
@@ -23,6 +23,11 @@
 
                         {% include "common/form/input_text.html" with form_input=form.nom object_field="programme__nom__"|add:form.uuid.value %}
                         {% include "common/form/input_textarea.html" with form_input=form.adresse helptext_visible="True" object_field="programme__adresse__"|add:form.uuid.value %}
+                        {% if not form.adresse.value is None %}
+                            <div class="fr-mt-1w fr-mb-3w fr-hint-text">
+                                <em>Si ce champs est déjà pré-rempli, c'est que des adresses ont déjà été associées à cette opération. <br/>Veuillez-vous assurer d'avoir renseigné l'exhaustivité des adresses de l'opération.</em>
+                            </div>
+                        {% endif %}
 
                         <div class="fr-grid-row fr-grid-row--gutters">
                             <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
