fix: legend on fieldset

--- a/templates/conventions/cadastre.html
+++ b/templates/conventions/cadastre.html
@@ -48,14 +48,15 @@
                             <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
                                 <div class="fr-mb-3w fr-form-group">
                                     <fieldset class="fr-fieldset">
+                                        <legend hidden>Choix de la date d'achevement</legend>
                                         <div class="fr-fieldset__content">
                                             <div class="fr-radio-group">
                                                 <input type="radio" value= "achevement" id="achevement" name="achevement" class="achevement_choice_button">
-                                                <label for="achevement">Mon batiment est achevé</label>
+                                                <label for="achevement">Mon bâtiment est achevé</label>
                                             </div>
                                             <div class="fr-radio-group">
                                                 <input type="radio" value= "achevement_previsible" id="achevement_previsible" name="achevement"class="achevement_choice_button">
-                                                <label for="achevement_previsible">Mon batiment est en construction</label>
+                                                <label for="achevement_previsible">Mon bâtiment est en construction</label>
                                             </div>
                                         </div>
                                         <script type="text/javascript" nonce="{{request.csp_nonce}}">
