s558 : simplify with fr-btn class

--- a/templates/layout/siap/habilitations.html
+++ b/templates/layout/siap/habilitations.html
@@ -28,8 +28,8 @@
             {% endif %}
         {% endfor %}
     </ul>
-    <a href="{{ request|get_manage_habilitation_url }}" class="navy-background fr-px-2w fr-py-3v fr-text--md fr-grid-row--left">
-        <span aria-hidden="true">Gérer mes habilitations </span>
+    <a href="{{ request|get_manage_habilitation_url }}" class="fr-btn fr-px-2w fr-py-3v fr-text--md">
+        <span aria-hidden="true">Gérer mes habilitations</span>
     </a>
 </div>
 
