--- a/static/css/ui_siap.css
+++ b/static/css/ui_siap.css
@@ -2,24 +2,12 @@
   flex: unset;
   position: relative
 }
-/* .fr-nav__btn[aria-controls="menu-/operation"] {
-  position: relative;
-} */
+
 .fr-nav__btn[aria-controls="list-habilitation"]::before {
   display: none!important;
 }
-/* .fr-nav__btn[aria-controls="menu-/operation"]::before {
-  content: "";
-  display: none;
-  background-color: var(--background-active-blue-france);
-  position: absolute;
-  top: auto;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 2px;
-  margin-top: 0;
-} */
+
+
 .orange-background,
 .fr-nav__btn[aria-current].orange-background,
 .fr-nav__btn[aria-current].orange-background:hover,
@@ -29,17 +17,9 @@
   text-decoration: none;
 }
 
-.navy-background,
-a.navy-background:hover {
-  background-color: var(--background-action-high-blue-france);
-  color: #fff;
-  text-align: left;
+.habilitation-bloc .fr-btn {
   display: block;
-}
-a.navy-background:hover {
-  background-image: radial-gradient(circle, rgba(17, 17, 255, 0.3), rgba(17, 17, 255, 0.3) 3%);
-  text-decoration: none;
-  text-decoration-style: none;
+  text-align: left;
 }
 
 .habilitation-bloc {
@@ -53,9 +33,13 @@ a.navy-background:hover {
   padding-right: 0 !important;
   margin-right: 0;
   box-shadow: 0 16px 16px -16px #00000052,0 8px 16px #0000001a;
-  /* overflow-y: auto;
-  max-height: 400px; */
 }
+
+.habilitation-bloc ul{
+  overflow-y: auto;
+  max-height: 400px;
+}
+
 .habilitation-bloc .fr-menu__list {
   padding: 0;
 }
