--- a/templates/conventions/sent.html
+++ b/templates/conventions/sent.html
@@ -7,52 +7,82 @@
 {% block content %}
     <div class="fr-container-fluid ds_banner">
         {% include "conventions/common/form_header.html"%}
-        {% include "common/step_progressbar.html"%}
-        {% if request|is_instructeur %}
-            <div class="fr-container fr-pb-5w">
-
-                <p class="fr-h2">Ici, vous pouvez téléverser votre convention signée afin qu'elle puisse être transmise. </p>
-
-                <form method="post" action="" enctype="multipart/form-data" id="{{upform.file.id_for_label}}_form">
-                    {% csrf_token %}
-                    <input
-                        class="fileinput--hidden"
-                        type="file"
-                        id="{{upform.file.id_for_label}}"
-                        name="{{upform.file.html_name}}"
-                        accept="application/pdf">
+        <div class="fr-container fr-pb-5w">
+            {% if request|is_instructeur %}
+                <div role="alert" class="fr-alert fr-alert--info fr-icon-arrow-right-s-line-double">
+                    <p class="fr-alert__title">
+                        Téléverser la convention signée
+                    </p>
+                    <p class="fr-mb-2w">
+                        Ici, vous pouvez téléverser votre convention signée afin qu'elle puisse être transmise.
+                    </p>
                     <div class="block--row-strech">
-                        <div>
-                            <button id="{{upform.file.id_for_label}}_upload_button" class="fr-btn fr-icon-upload-line fr-btn--icon-left" type="button">
-                                Téléverser la convention signée
-                            </button>
-                            {% for error in upform.file.errors %}
-                                <p id="text-input-error-desc-error" class="fr-error-text">
-                                    {{ error }}
-                                </p>
-                            {% endfor %}
-                        </div>
-                    </div>
 
-                    <script type="text/javascript" nonce="{{request.csp_nonce}}">
-                        document.getElementById('{{upform.file.id_for_label}}_upload_button').onclick = function() {
-                            document.getElementById('{{upform.file.id_for_label}}').click();
-                        };
-                        document.getElementById('{{upform.file.id_for_label}}').onchange = function() {
-                            var input = document.createElement('input');
-                            input.setAttribute('type', 'hidden');//hidden input
-                            input.setAttribute('name', 'Upload');//set the param name
-                            input.setAttribute('value', 'True');//set the value
-                            this.form.appendChild(input)
-                            document.getElementById("{{upform.file.id_for_label}}_form").submit();
-                        }
-                    </script>
-                </form>
+                        <form method="post" action="" enctype="multipart/form-data" id="{{upform.file.id_for_label}}_form">
+                            {% csrf_token %}
+                            <input
+                                class="fileinput--hidden"
+                                type="file"
+                                id="{{upform.file.id_for_label}}"
+                                name="{{upform.file.html_name}}"
+                                accept="application/pdf">
+                            <div class="block--row-strech">
+                                <div>
+                                    <button id="{{upform.file.id_for_label}}_upload_button" class="fr-btn fr-icon-upload-line fr-btn--icon-left" type="button">
+                                        Téléverser la convention signée
+                                    </button>
+                                    {% for error in upform.file.errors %}
+                                        <p id="text-input-error-desc-error" class="fr-error-text">
+                                            {{ error }}
+                                        </p>
+                                    {% endfor %}
+                                </div>
+                            </div>
+
+                            <script type="text/javascript" nonce="{{request.csp_nonce}}">
+                                document.getElementById('{{upform.file.id_for_label}}_upload_button').onclick = function() {
+                                    document.getElementById('{{upform.file.id_for_label}}').click();
+                                };
+                                document.getElementById('{{upform.file.id_for_label}}').onchange = function() {
+                                    var input = document.createElement('input');
+                                    input.setAttribute('type', 'hidden');//hidden input
+                                    input.setAttribute('name', 'Upload');//set the param name
+                                    input.setAttribute('value', 'True');//set the value
+                                    this.form.appendChild(input)
+                                    document.getElementById("{{upform.file.id_for_label}}_form").submit();
+                                }
+                            </script>
+                        </form>
+                        <a class="fr-my-1w fr-link fr-ml-2w" href="{% url 'conventions:recapitulatif' convention_uuid=convention.uuid %}">
+                            Consulter le récapitulatif
+                        </a>
+                    </div>
+                </div>
+            {% else %}
+                <div role="alert" class="fr-alert fr-alert--success">
+                    <p class="">Ici, la convention pourra être téléversée par l'administration en charge dès qu'elle sera signée.
+                    </p>
+                    <a class="fr-my-1w fr-link" href="{% url 'conventions:recapitulatif' convention_uuid=convention.uuid %}">
+                        Consulter le récapitulatif
+                    </a>
+                </div>
+            {% endif %}
+            <div class="fr-col-12 fr-mt-2w">
+                <div class="fr-mb-2w block--row-strech apilos-line-top">
+                    <div class="block--row-strech-1 fr-my-2w">
+                        <p class="fr-alert__title">
+                            Voir la conventions signée (en PDF)
+                        </p>
+                        <p>
+                            Vous pouvez la prévisualiser et la télécharger.
+                        </p>
+                    </div>
+                    <button class="fr-btn fr-btn--secondary fr-my-1w fr-icon-eye-line fr-btn--icon-left">
+                        <a href="{% url 'conventions:preview' convention_uuid=convention.uuid %}">Consulter</a>
+                    </button>
+                </div>
             </div>
-        {% else %}
-            <div class="fr-container fr-pb-5w">
-                <p class="fr-h2">Ici, la convention pourra être téléversée par l'administration en charge dès qu'elle sera signée. </p>
-            </div>
-        {% endif %}
+            <div class="apilos-line-top"></div>
+        </div>
     </div>
 {% endblock %}
