--- a/templates/conventions/actions/generate_convention.html
+++ b/templates/conventions/actions/generate_convention.html
@@ -1,7 +1,7 @@
 <div class="fr-col-12 block--row-strech apilos-line-top">
     <div class="block--row-strech-1 fr-my-2w">
         <p class="fr-alert__title">
-            Télécharger le projet {% if convention.is_avenant %}d'avenant à {% endif %}de convention (en docx)
+            Télécharger le projet de {% if convention.is_avenant %}l'avenant à {% endif %}la convention (en docx)
         </p>
         {% if not convention.type1and2_configuration_not_needed %}
             <p>
