--- a/templates/conventions/type1and2_options.html
+++ b/templates/conventions/type1and2_options.html
@@ -3,7 +3,7 @@
     {% with type1and2editable=convention.display_options.display_type1and2_editable %}
         <div class="fr-grid-row fr-grid-row--gutters">
             <div class="fr-col-12 fr-col-lg-12">
-                <div class="apilos-line-top">
+                <div class="apilos-line-top fr-pt-2w">
                     <div class="block--row-strech fr-my-2w" id="{{object_field}}_div">
                         <div class="block--row-strech-1">
                             <p class="fr-alert__title">
