--- a/templates/conventions/actions/delete.html
+++ b/templates/conventions/actions/delete.html
@@ -1,13 +1,13 @@
-<div class="fr-col-12 block--row-strech apilos-line-top">
-    <div class="block--row-strech-1 fr-my-2w">
+<div class="fr-col-12 block--row-strech apilos-line-top fr-mb-2w fr-pt-2w">
+    <div class="block--row-strech-1 fr-mt-2w">
         <p class="fr-alert__title">
             Supprimer ce projet {% if convention.is_avenant %}d'avenant{% else %}de convention{% endif %}
         </p>
-        <p>
+        <p class="fr-mb-0">
             Vous vous êtes trompé lors de la création ?
         </p>
     </div>
-    <button type="button" class="fr-btn apilos-btn--secondary--red fr-btn--icon-left fr-fi-delete-line  fr-my-1w" data-fr-opened="false" aria-controls="fr-modal-{{convention.uuid}}">
+    <button type="button" class="fr-btn apilos-btn--secondary--red fr-btn--icon-left fr-fi-delete-line fr-my-1w" data-fr-opened="false" aria-controls="fr-modal-{{convention.uuid}}">
         Supprimer {% if convention.is_avenant %}cet avenant{% else %}cette convention{% endif %}
     </button>
 </div>
