--- a/templates/conventions/preview.html
+++ b/templates/conventions/preview.html
@@ -7,7 +7,7 @@
 {% block content %}
     <div class="fr-container-fluid ds_banner">
         {% include "conventions/common/form_header.html"%}
-        <div class="fr-container fr-mb-2w">
+        <div class="fr-container fr-mb-2w fr-pt-5w">
             <h2>Visualiser votre convention</h2>
             <div class="fr-col-md-12 fr-py-5w h-80vh">
 
@@ -17,12 +17,12 @@
         </div>
         <div class="fr-container fr-mb-2w">
             <div class="form-button-footer fr-col-md-12  fr-py-5w">
-                {% if convention.display_options.display_progress_bar_3 %}
-                    <a class="fr-btn fr-btn--secondary fr-icon-arrow-left-s-line fr-btn--icon-left" href="{% url 'conventions:post_action' convention_uuid=convention.uuid %}">
+                {% if convention.display_options.display_redirect_post_action %}
+                    <a class="fr-btn fr-btn--secondary fr-icon-arrow-right-s-line fr-btn--icon-right" href="{% url 'conventions:post_action' convention_uuid=convention.uuid %}">
                         Retour
                     </a>
                 {% else %}
-                    <a class="fr-btn fr-btn--secondary fr-icon-arrow-left-s-line fr-btn--icon-left"" href="{% url 'conventions:sent' convention_uuid=convention.uuid %}">
+                    <a class="fr-btn fr-btn--secondary fr-icon-arrow-right-s-line fr-btn--icon-right" href="{% url 'conventions:sent' convention_uuid=convention.uuid %}">
                         Retour
                     </a>
                 {% endif %}
