--- a/templates/conventions/sent.html
+++ b/templates/conventions/sent.html
@@ -7,7 +7,7 @@
 {% block content %}
     <div class="fr-container-fluid ds_banner">
         {% include "conventions/common/form_header.html"%}
-        <div class="fr-container fr-pb-5w">
+        <div class="fr-container fr-py-5w">
             {% if request|is_instructeur %}
                 <div role="alert" class="fr-alert fr-alert--info fr-icon-arrow-right-s-line-double">
                     <p class="fr-alert__title">
@@ -67,8 +67,8 @@
                     </a>
                 </div>
             {% endif %}
-            <div class="fr-col-12 fr-mt-2w">
-                <div class="fr-mb-2w block--row-strech apilos-line-top">
+            <div class="fr-col-12 fr-mt-4w">
+                <div class="fr-mb-2w fr-pt-2w block--row-strech apilos-line-top">
                     <div class="block--row-strech-1 fr-my-2w">
                         <p class="fr-alert__title">
                             Voir la conventions signée (en PDF)
@@ -82,7 +82,13 @@
                     </button>
                 </div>
             </div>
-            <div class="apilos-line-top"></div>
+            {% if request|is_instructeur and convention.display_options.display_back_to_instruction %}
+                <div class="fr-col-12">
+                    <div class="fr-mb-2w block--row-strech apilos-line-top">
+                        {% include "conventions/actions/back_to_instruction.html" %}
+                    </div>
+                </div>
+            {% endif %}
         </div>
     </div>
 {% endblock %}
