fix: test and redirection at validation

--- a/templates/conventions/sent.html
+++ b/templates/conventions/sent.html
@@ -72,7 +72,7 @@
                 <div class="fr-mb-2w fr-pt-2w block--row-strech apilos-line-top">
                     <div class="block--row-strech-1 fr-my-2w">
                         <p class="fr-alert__title">
-                            Voir la conventions (en PDF)
+                            Voir la convention
                         </p>
                         <p>
                             Vous pouvez la prévisualiser et la télécharger.
