--- a/templates/conventions/actions/generate_convention.html
+++ b/templates/conventions/actions/generate_convention.html
@@ -1,29 +1,27 @@
-<div class="fr-col-12 fr-col-lg-6">
-    <div role="alert" class="fr-alert fr-alert--info">
+<div class="fr-col-12 block--row-strech apilos-line-top fr-pt-5w">
+    <div class="block--row-strech-1 fr-mr-6w">
         <p class="fr-alert__title">
-            Générer et Télécharger {% if convention.is_avenant %}l'avenant à {% endif %}la convention
+            Télécharger le projet de {% if convention.is_avenant %}l'avenant à {% endif %}la convention (en docx)
         </p>
         {% if not convention.type1and2_configuration_not_needed %}
-            <p>
-                Avant de pouvoir générer un document {% if convention.is_avenant %}d'avenant à la convention{% else %}de convention{% endif %}, il vous faut préciser le type de convention I ou II et les options associées dans la section <strong>Convention de type I & II</strong>
+            <p class="fr-mb-0">
+                Avant de pouvoir générer un document {% if convention.is_avenant %}d'avenant à la convention{% else %}de convention{% endif %}, il vous faut préciser le type de convention I ou II et les options associées dans la section <strong>Convention de type I & II ci-dessus.</strong>
             </p>
-            <button class="fr-btn fr-my-1w" disabled>
-                Générer la convention
+            </div>
+            <button class="fr-btn fr-btn--secondary fr-my-1w fr-icon-download-line fr-btn--icon-left" disabled>
+                Télécharger
             </button>
         {% else %}
-            <p>
-                Le document {% if convention.is_avenant %}d'avenant à la convention{% else %}de convention{% endif %} sera généré en format docx et téléchargé automatiquement. Pour plus d'information, n'hésitez pas à consulter l'<a class="fr-link" href="https://docs.apilos.beta.gouv.fr/utiliser-la-plateforme/comment-signer-une-convention#generer-la-convention-au-format-word-ou-openoffice" target="_blank">aide en ligne</a>
+            <p class="fr-mb-0">
+                Attention, {% if convention.is_avenant %}l'avenant à la convention{% else %}la convention{% endif %} n’est pas encore validé{% if not convention.is_avenant %}e{% endif %}, ce document est fourni à titre indicatif.
+                <a class="fr-link" href="https://docs.apilos.beta.gouv.fr/bailleurs-guide/comment-remplir-les-champs/recapitulatif" target="_blank" rel="noopener">En savoir plus</a>
             </p>
-            <p class="fr-my-2w">
-                <span class="fr-icon-warning-line fr-mr-1w" aria-hidden="true"></span>
-                <strong>Attention, {% if convention.is_avenant %}l'avenant à {% endif %}la convention n'est pas encore validée. Ce document ne peut être téléchargé qu'à titre informatif et ne saurait être utilisé comme document finalisé.</strong>
-            </p>
+            </div>
             <form method="post" action="{% url 'conventions:generate' convention_uuid=convention.uuid %}" data-turbo="false">
                 {% csrf_token %}
-                <button class="fr-btn fr-my-1w">
-                    Générer {% if convention.is_avenant %}l'avenant à {% endif %}la convention
+                <button class="fr-btn fr-btn--secondary fr-my-1w fr-icon-download-line fr-btn--icon-left">
+                    Télécharger
                 </button>
             </form>
         {% endif %}
     </div>
-</div>
