--- a/templates/conventions/post_action.html
+++ b/templates/conventions/post_action.html
@@ -7,47 +7,97 @@
 {% block content %}
     <div class="fr-container-fluid ds_banner">
         {% include "conventions/common/form_header.html"%}
-        {% include "common/step_progressbar.html"%}
-        <div class="fr-container fr-pb-5w">
-            {% if convention.televersement_convention_signee_le %}
-                <p class="fr-h3">Votre convention signée a été téléversée le {{convention.televersement_convention_signee_le}}
-                </p>
-            {% else %}
-                <p class="fr-h3">Votre convention signée a déjà été téléversée</p>
+        {% include "common/nav_bar.html"%}
+        <div class="fr-container fr-py-5w">
+            <div class="fr-col-md-12 fr-mt-2w fr-mb-4w">
+                <div role="alert" class="fr-alert fr-alert--success">
+                    {% if convention.televersement_convention_signee_le %}
+                        <p class="">Votre convention signée a été validée le <strong>{{convention.televersement_convention_signee_le}}</strong> <em>(Avec le numéro {{convention.numero}})</em>
+                        </p>
+                    {% else %}
+                        <p class="fr-alert__title">Votre convention signée a déjà été téléversée</p>
+                    {% endif %}
+                </div>
+            </div>
+            {% if request|is_bailleur %}
+                <div class="fr-col-12 fr-mb-4w">
+                    <div role="alert" class="fr-alert fr-alert--info  fr-icon-arrow-right-s-line-double">
+                        <p class="fr-alert__title">
+                            Créer un avenant
+                        </p>
+                        <p>Votre projet a évolué. Vous avez identifié des informations erronées ou caduques ?</p>
+                        <div class="block--row-strech">
+                            <a class="fr-btn fr-my-1w fr-mr-2w" href="{% url 'conventions:new_avenant' convention_uuid=convention.uuid %}">
+                                <span class="fr-fi-add-circle-line fr-mr-1w" aria-hidden="true"></span>Créer un avenant
+                            </a>
+                            <a class="fr-my-1w fr-link" href="{% url 'conventions:recapitulatif' convention_uuid=convention.uuid %}">
+                                Consulter le récapitulatif
+                            </a>
+                        </div>
+                    </div>
+                </div>
             {% endif %}
-            <p>Vous pouvez la prévisualiser et la télécharger à l'étape <a href="{% url 'conventions:preview' convention_uuid=convention.uuid %}">Prévisualisation</a></p>
-            <div class="fr-grid-row fr-grid-row--gutters">
-
-                <div class="fr-col-12 fr-mb-2w">
-                    <div role="alert" class="fr-alert fr-alert--info">
+            <div class="fr-col-12">
+                <div class="fr-mb-2w fr-pt-2w block--row-strech apilos-line-top">
+                    <div class="block--row-strech-1 fr-my-2w">
                         <p class="fr-alert__title">
                             Générer la fiche CAF
                         </p>
-                        <p>
+                        <p class="fr-mb-0">
                             La fiche CAF sera générée en format docx et téléchargée automatiquement.
                         </p>
-                        <form action="{% url 'conventions:fiche_caf' convention_uuid=convention.uuid %}">
-                            {% csrf_token %}
-                            <button class="fr-btn fr-my-1w">
-                                Générer la fiche CAF
-                            </button>
-                        </form>
+                    </div>
+                    <form action="{% url 'conventions:fiche_caf' convention_uuid=convention.uuid %}">
+                        {% csrf_token %}
+                        <button class="fr-btn fr-my-1w fr-btn--secondary fr-my-1w fr-icon-download-line fr-btn--icon-left">
+                            Générer la fiche CAF
+                        </button>
+                    </form>
+                </div>
+            </div>
+            <div class="fr-col-12">
+                <div class="fr-mb-2w fr-pt-2w block--row-strech apilos-line-top">
+                    <div class="block--row-strech-1 fr-my-2w">
+                        <p class="fr-alert__title">
+                            Voir la conventions signée (en PDF)
+                        </p>
+                        <p>
+                            Vous pouvez la prévisualiser et la télécharger.
+                        </p>
+                    </div>
+                    <button class="fr-btn fr-btn--secondary fr-my-1w fr-icon-eye-line fr-btn--icon-left">
+                        <a href="{% url 'conventions:preview' convention_uuid=convention.uuid %}">Consulter</a>
+                    </button>
+                </div>
+            </div>
+            {% if request|is_instructeur and convention.display_options.display_back_to_instruction %}
+                <div class="fr-col-12">
+                    <div class="fr-mb-2w fr-pt-2w block--row-strech apilos-line-top">
+                        {% include "conventions/actions/back_to_instruction.html" %}
                     </div>
                 </div>
+            {% endif %}
+            <div class="fr-col-12">
                 {% if request|is_instructeur %}
-                    <div class="fr-col-12  fr-mb-3w">
-                        <div role="alert" class="fr-alert fr-alert--warning">
+                    <div class="fr-mb-5w fr-pt-2w apilos-line-top">
+                        <div class="fr-my-2w">
                             <p class="fr-alert__title">
                                 Résiliation/dénonciation de la convention
                             </p>
                             <p class="fr-mb-2w">Vous pouvez ici procéder à la résiliation/dénonciation de la convention dans APiLos.</p>
+
                             <form method="post" action="" id="{{resiliation_form.date_resiliation.id_for_label}}_validation_form">
                                 {% csrf_token %}
-                                {% include "common/form/input_date.html" with form_input=resiliation_form.date_resiliation editable=True %}
+                                <div class="block--row-strech">
+                                    <div class="block--row-strech-1  fr-mr-6w">
 
-                                <button class="fr-btn apilos-btn--red fr-btn--icon-left fr-fi-delete-line fr-my-2w" data-fr-opened="false" type="button" aria-controls="fr-modal-resiliate-{{convention.uuid}}">
-                                    Résilier/Dénoncer la convention
-                                </button>
+                                        {% include "common/form/input_date.html" with form_input=resiliation_form.date_resiliation editable=True %}
+                                    </div>
+
+                                    <button class="fr-btn apilos-btn--secondary--red fr-btn--icon-left fr-fi-delete-line fr-my-2w" data-fr-opened="false" type="button" aria-controls="fr-modal-resiliate-{{convention.uuid}}">
+                                        Résilier/Dénoncer la convention
+                                    </button>
+                                </div>
                             </form>
                         </div>
                         <dialog aria-labelledby="fr-modal-resiliate-{{convention.uuid}}-title" id="fr-modal-resiliate-{{convention.uuid}}" class="fr-modal" role="dialog">
@@ -90,23 +140,7 @@
                     </div>
                 {% endif %}
             </div>
-            {% if request|is_bailleur %}
-                <div class="fr-col-md-12">
-                    <div role="alert" class="fr-alert fr-alert--info">
-                        <p class="fr-alert__title">
-                            Avenants
-                        </p>
-                        <p>
-                            L'avenant créé sera automatiquement rattaché à la convention actuelle.
-                        </p>
-                        <div>
-                            <a class="fr-btn fr-my-1w" href="{% url 'conventions:new_avenant' convention_uuid=convention.uuid %}">
-                                <span class="fr-fi-add-circle-line fr-mr-1w" aria-hidden="true"></span>Créer un avenant
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            {% endif %}
+            <div class="fr-mb-2w fr-pt-2w apilos-line-top"></div>
             {% include "conventions/avenant_list.html" with conventions=avenants %}
 
             {% if request|is_instructeur %}
