--- a/templates/conventions/selection.html
+++ b/templates/conventions/selection.html
@@ -33,6 +33,13 @@
                                         });
                                     </script>
                                     <div id='programme_selection' class="fr-ml-4w fr-select-group {% if form.lot_uuid.errors %}fr-select-group--error{% endif %}"  {% if form.existing_programme.value != 'selection' %}hidden{% endif %}>
+                                        <details>
+                                            <summary class="text-title-blue-france fr-text--xs"><u>Comment afficher uniquement les programmes de mes départements ?</u></summary>
+                                            <div class="fr-text--xs">
+                                                <div>Vous pouvez choisir vos zones et départements d’intervention dans votre <a class="fr-link fr-text--xs" href="{% url 'settings:profile' %}">espace personnel.</a></div>
+                                                <div><a href="https://docs.apilos.beta.gouv.fr/apres-la-validation-de-la-convention/bailleurs-parametres/comment-afficher-mes-programmes-par-departement" target="_blank" rel="noopener" class="fr-link fr-text--xs">Plus d’informations sur les paramètres de votre compte</a></div>
+                                            </div>
+                                        </details>
                                         <div class="fr-mt-1w block--row-strech" id="{{form.lot_uuid.id_for_label}}_div">
                                             <select
                                                 class="fr-select {% if form.lot_uuid.errors %}fr-select--error{% endif %}"
