update: change label for template

--- a/templates/conventions/actions/back_to_instruction.html
+++ b/templates/conventions/actions/back_to_instruction.html
@@ -2,16 +2,16 @@
     <div class="block--row-strech fr-my-2w">
         <div class="block--row-strech-1 fr-my-2w fr-mr-6w">
             <p class="fr-alert__title">
-                Repasser cette convention en "Instruction requise"
+                Repasser cette convention en "A instruire"
             </p>
             <p>
                 Cette convention est {% if convention.display_options.display_redirect_sent %}en attente de signature{% else %}déjà signée{% endif %}. Cependant,
-                s'il reste des modifications à apporter, vous avez la possibilité de la repasser en statut "Instruction requise".
+                s'il reste des modifications à apporter, vous avez la possibilité de la repasser en statut "A instruire".
                 en cliquant sur le bouton ci-dessous
             </p>
             <p>
                 <span class="fr-icon-warning-line" aria-hidden="true"></span>
-                Une fois la convention en statut "Instruction requise", c'est l'instructeur qui aura la main sur la convention (c'est à dire vous-même).
+                Une fois la convention en statut "A instruire", c'est l'instructeur qui aura la main sur la convention (c'est à dire vous-même).
                 Si l'intervention du bailleur est nécéssaire, vous devrez alors lui renvoyer en cliquant sur le bouton "Demander des corrections au bailleur"
             </p>
         </div>
