--- a/templates/conventions/avenant_list.html
+++ b/templates/conventions/avenant_list.html
@@ -48,7 +48,7 @@
                                     <td title="{{convention.statut_for_template.statut_display}}">
                                         <div class="fr-p-1w apilos-colored_status apilos-colored_status--{{convention.statut_for_template.key_statut}}">
                                             <span><strong>
-                                                {{convention.statut_for_template.short_statut}}
+                                                {{convention.short_statut_for_template}}
                                             </strong></span>
                                         </div>
                                         <script type="text/javascript" nonce="{{request.csp_nonce}}">
