--- a/templates/conventions/common/form_header.html
+++ b/templates/conventions/common/form_header.html
@@ -42,10 +42,7 @@
                             {% endif %}
                             <div class="fr-py-1w apilos-colored_status apilos-colored_status--{{convention.statut_for_template.key_statut}}">
                                 <span class="fr-px-1w fr-h3">
-                                    {{convention.statut_for_template.short_statut}}
-                                </span><br>
-                                <span class="fr-px-1w">
-                                    {{convention.statut_for_template.statut_display}}
+                                    {{convention.short_statut_for_template}}
                                 </span>
                             </div>
                         </div>
